Move config to common library

--- a/SCME.UI/CustomControl/HardwareItem.xaml
+++ b/SCME.UI/CustomControl/HardwareItem.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:my="clr-namespace:SCME.UI"
-             xmlns:res="clr-namespace:SCME.UI.Properties"
+             xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
              mc:Ignorable="d" d:DesignHeight="150" d:DesignWidth="500"
              Name="userControlItem">
     <UserControl.Resources>
