--- a/SCME.UI/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.UI/CustomControl/ListBoxTestParameters.xaml
@@ -1,7 +1,7 @@
 ﻿<ListView x:Class="SCME.UI.CustomControl.ListBoxTestParameters"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:res="clr-namespace:SCME.UI.Properties"
+             xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
              xmlns:ui="clr-namespace:SCME.UI" 
              xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
              xmlns:gateParameters="clr-namespace:SCME.Types.Gate;assembly=SCME.Types" 
@@ -9,6 +9,7 @@
              xmlns:vtmParameters="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
              xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
              xmlns:atuParameters="clr-namespace:SCME.Types.ATU;assembly=SCME.Types"
+             xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
              Background="{StaticResource xWhite1}" HorizontalAlignment="Stretch" >
     <ListView.Resources>
         <ui:BooleanToVisibilityConverter x:Key="B2V" />
@@ -127,7 +128,7 @@
                                                           Content="M 0 1 L 1 0 L 2 1"
                                                           Margin="0,0,0,1" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"
-                                                          Visibility="{Binding Source={x:Static res:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
+                                                          Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
                                             <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true">
                                                 <Track.DecreaseRepeatButton>
                                                     <RepeatButton Style="{StaticResource ScrollBarPageButton}"
@@ -146,7 +147,7 @@
                                                           Content="M 0 0 L 1 1 L 2 0"
                                                           Margin="0,1,0,0" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"
-                                                          Visibility="{Binding Source={x:Static res:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
+                                                          Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
                                         </Grid>
                                     </ControlTemplate>
                                 </ScrollBar.Template>
@@ -241,7 +242,7 @@
 
         <customControl:MyDataTemplateDictionary x:Key="MyDataTemplateDictionary">
             <DataTemplate  DataType="gateParameters:TestParameters" x:Key="GateParametersTemplate">
-                <Grid Visibility="{Binding GateIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding GateIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -333,7 +334,7 @@
             </DataTemplate>
             
             <DataTemplate  DataType="bvtParameters:TestParameters" x:Key="BvtParametersTemplate">
-                <Grid Visibility="{Binding BvtIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding BvtIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -494,7 +495,7 @@
             </DataTemplate>
             
             <DataTemplate  DataType="vtmParameters:TestParameters" x:Key="VtmParametersTemplate">
-                <Grid Visibility="{Binding SLIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10">
+                <Grid Visibility="{Binding SLIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="93*"></ColumnDefinition>
@@ -672,7 +673,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="dVdtParameters:TestParameters" x:Key="dVdtParametersTemplate">
-                <Grid Visibility="{Binding dVdtIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding dVdtIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -752,7 +753,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="atuParameters:TestParameters" x:Key="ATUParametersTemplate">
-                <Grid Visibility="{Binding ATUIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding ATUIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"/>
                         <ColumnDefinition Width="7*"/>
@@ -794,7 +795,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="QrrTqParameters:TestParameters" x:Key="QrrTqParametersTemplate">
-                <Grid Visibility="{Binding QrrTqIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding QrrTqIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"/>
                         <ColumnDefinition Width="7*"/>
@@ -859,7 +860,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="RACParameters:TestParameters" x:Key="RACParametersTemplate">
-                <Grid Visibility="{Binding RACIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding RACIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"/>
                         <ColumnDefinition Width="7*"/>
@@ -895,7 +896,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="TOUParameters:TestParameters" x:Key="TOUParametersTemplate">
-                <Grid Visibility="{Binding TOUIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,70,10" >
+                <Grid Visibility="{Binding TOUIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,70,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"/>
                         <ColumnDefinition Width="7*"/>
