--- a/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
+++ b/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
@@ -1,7 +1,7 @@
 ﻿<ListView x:Class="SCME.UI.CustomControl.ListViewTestParametersSelection"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:res="clr-namespace:SCME.UI.Properties"
+             xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
              xmlns:ui="clr-namespace:SCME.UI" 
              xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
              xmlns:gateParameters="clr-namespace:SCME.Types.Gate;assembly=SCME.Types" 
@@ -10,6 +10,8 @@
              xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
              xmlns:atuParameters="clr-namespace:SCME.Types.ATU;assembly=SCME.Types"
              xmlns:customControls="WpfControlLibrary"
+             xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
+             xmlns:rac="clr-namespace:SCME.Types.RAC;assembly=SCME.Types"
              Background="{StaticResource xWhite1}" HorizontalAlignment="Stretch">
     <ListView.Resources>
 
@@ -129,7 +131,7 @@
                                                           Content="M 0 1 L 1 0 L 2 1"
                                                           Margin="0,0,0,1" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"
-                                                          Visibility="{Binding Source={x:Static res:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
+                                                          Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
                                             <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true">
                                                 <Track.DecreaseRepeatButton>
                                                     <RepeatButton Style="{StaticResource ScrollBarPageButton}"
@@ -148,7 +150,7 @@
                                                           Content="M 0 0 L 1 1 L 2 0"
                                                           Margin="0,1,0,0" Style="{StaticResource ScrollBarLineButton}"
                                                           Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"
-                                                          Visibility="{Binding Source={x:Static res:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
+                                                          Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ScrollBarButtonIsVisible, Converter={StaticResource B2V}}" />
                                         </Grid>
                                     </ControlTemplate>
                                 </ScrollBar.Template>
@@ -211,7 +213,7 @@
 
         <customControl:MyDataTemplateDictionary x:Key="MyDataTemplateDictionary">
             <DataTemplate  DataType="gateParameters:TestParameters" x:Key="GateParametersTemplate">
-                <Grid Visibility="{Binding GateIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                <Grid Visibility="{Binding GateIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -298,7 +300,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate  DataType="bvtParameters:TestParameters" x:Key="BvtParametersTemplate">
-                <Grid Visibility="{Binding BvtIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                <Grid Visibility="{Binding BvtIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -446,7 +448,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate  DataType="vtmParameters:TestParameters" x:Key="VtmParametersTemplate">
-                <Grid Visibility="{Binding SLIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10">
+                <Grid Visibility="{Binding SLIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="93*"></ColumnDefinition>
@@ -623,7 +625,7 @@
                 </Grid>
             </DataTemplate>
             <DataTemplate DataType="dVdtParameters:TestParameters" x:Key="dVdtParametersTemplate">
-                <Grid Visibility="{Binding dVdtIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                <Grid Visibility="{Binding dVdtIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -691,7 +693,7 @@
             </DataTemplate>
 
             <DataTemplate DataType="atuParameters:TestParameters" x:Key="ATUParametersTemplate">
-                <Grid Visibility="{Binding ATUIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                <Grid Visibility="{Binding ATUIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -729,7 +731,7 @@
             </DataTemplate>
 
             <DataTemplate DataType="qrrTqParameters:TestParameters" x:Key="QrrTqParametersTemplate">
-                <Grid Visibility="{Binding QrrTqIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                <Grid Visibility="{Binding QrrTqIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -792,8 +794,8 @@
                 </Grid>
             </DataTemplate>
 
-            <DataTemplate DataType="RACParameters:TestParameters" x:Key="RACParametersTemplate">
-                <Grid Visibility="{Binding RACIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+            <DataTemplate DataType="rac:TestParameters" x:Key="RACParametersTemplate">
+                <Grid Visibility="{Binding RACIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
@@ -827,7 +829,7 @@
             </DataTemplate>
 
             <DataTemplate DataType="TOUParameters:TestParameters" x:Key="TOUParametersTemplate">
-                <Grid Visibility="{Binding TOUIsVisible, Converter={StaticResource B2V}, Source={x:Static res:Settings.Default}}" Margin="0,10,0,10" >
+                <Grid Visibility="{Binding TOUIsVisible, Converter={StaticResource B2V}, Source={x:Static uiServiceConfig:Settings.Default}}" Margin="0,10,0,10" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93*"></ColumnDefinition>
                         <ColumnDefinition Width="7*"></ColumnDefinition>
