--- a/SCME.UI/MainWindow.xaml
+++ b/SCME.UI/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="1024" Width="1280" Height="1024"
         xmlns:custom="clr-namespace:SCME.UI.CustomControl" 
-        xmlns:props="clr-namespace:SCME.UI.Properties"
-        xmlns:ui="clr-namespace:SCME.UI" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
+        xmlns:props="clr-namespace:SCME.UIServiceConfig.Properties"
+        xmlns:ui="clr-namespace:SCME.UI"
+        xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
+        DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
         Name="mainWindow" Title="SCME.UI"
         WindowStyle="None"
         Focusable="False"
@@ -103,7 +105,7 @@
 
                     <StackPanel Grid.Column="3" Grid.Row="0" HorizontalAlignment="Right" Orientation="Horizontal">
                         <Border Margin="0,5,30,5" Padding="10, 0, 10, 0"
-                            Visibility="{Binding Source={x:Static props:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}">
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}">
                             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                                 <Path x:Name="clampPath" Data="{StaticResource ClampPath}" Stroke="DarkSeaGreen"
                                   StrokeThickness="5" VerticalAlignment="Center"
@@ -131,7 +133,7 @@
                             Style="{StaticResource ButtonPath}" Padding="5" Margin="0, 10, 30, 10"/>
                         <Button Content="{StaticResource ClosePath}" Click="BtnExit_Click"
                             Style="{StaticResource ButtonPath}" Padding="5" Margin="0, 10, 30, 10"
-                            Visibility="{Binding Source={x:Static props:Settings.Default}, Path=ExitButtonIsVisible, Converter={StaticResource B2V}}" />
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ExitButtonIsVisible, Converter={StaticResource B2V}}" />
                     </StackPanel>
                 </Grid>
              
