--- a/SCME.UI/PagesTech/CalibrationPage.xaml
+++ b/SCME.UI/PagesTech/CalibrationPage.xaml
@@ -4,9 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:my="clr-namespace:SCME.UI"
-      xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
       xmlns:customControls="WpfControlLibrary"
+      xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924"
       Name="calibrationPage" Title="{x:Static res:Resources.Calibration}">
 
@@ -123,23 +124,23 @@
                     <Button Background="{StaticResource xOrange2}"
                             Content="{x:Static res:Resources.Gate}" CommandParameter="1" Margin="150,50,25,25"
                             Style="{StaticResource SpcButton}" x:Name="btnGate"
-                            Visibility="{Binding Source={x:Static res:Settings.Default}, Path=GateIsVisible, Converter={StaticResource B2V}}" />
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=GateIsVisible, Converter={StaticResource B2V}}" />
                     <Button Background="{StaticResource xRed1}"
                             Content="{x:Static res:Resources.Vtm}" CommandParameter="2" Margin="25,50,150,25"
                             Style="{StaticResource SpcButton}" x:Name="btnVtm"
-                            Visibility="{Binding Source={x:Static res:Settings.Default}, Path=SLIsVisible, Converter={StaticResource B2V}}" />
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=SLIsVisible, Converter={StaticResource B2V}}" />
                     <Button Background="{StaticResource xBlue2}"
                             Content="{x:Static res:Resources.Bvt}" CommandParameter="3" Margin="150,25,25,25"
                             Style="{StaticResource SpcButton}" x:Name="btnBvt"
-                            Visibility="{Binding Source={x:Static res:Settings.Default}, Path=BvtIsVisible, Converter={StaticResource B2V}}" />
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=BvtIsVisible, Converter={StaticResource B2V}}" />
                     <Button Background="{StaticResource xGreen1}"
                             Content="{x:Static res:Resources.Clamp}" CommandParameter="4" Margin="25,25,150,25"
                             Style="{StaticResource SpcButton}" x:Name="btnClamp"
-                            Visibility="{Binding Source={x:Static res:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}" />
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=ClampIsVisible, Converter={StaticResource B2V}}" />
                     <Button Background="{StaticResource xPurple1}"
                             Content="{x:Static res:Resources.dVdt}" CommandParameter="5" Margin="150,25,25,50"
                             Style="{StaticResource SpcButton}" x:Name="btndVdt"
-                            Visibility="{Binding Source={x:Static res:Settings.Default}, Path=dVdtIsVisible, Converter={StaticResource B2V}}" />
+                            Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=dVdtIsVisible, Converter={StaticResource B2V}}" />
                 </UniformGrid>
             </TabItem>
 
