--- a/SCME.UI/PagesTech/RACPage.xaml
+++ b/SCME.UI/PagesTech/RACPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl" xmlns:ui="clr-namespace:SCME.UI"
       xmlns:local="clr-namespace:SCME.UI.PagesTech"
-      xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
       xmlns:customControls="WpfControlLibrary"
       mc:Ignorable="d" x:Name="rACPage"
       d:DesignWidth="1280" d:DesignHeight="924">
