--- a/SCME.UI/PagesUser/MeasureDialog.xaml
+++ b/SCME.UI/PagesUser/MeasureDialog.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl" Topmost="True" Width="800px" Height="500px"  WindowStyle="None"
       x:Name="measureDialog" >
     <Window.Resources>
