--- a/SCME.UI/PagesUser/UserTestPage.xaml
+++ b/SCME.UI/PagesUser/UserTestPage.xaml
@@ -3,12 +3,13 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
       xmlns:ui="clr-namespace:SCME.UI"
       xmlns:thisPage="clr-namespace:SCME.UI.PagesUser"
       xmlns:dynamicDataDisplay="clr-namespace:Microsoft.Research.DynamicDataDisplay;assembly=DynamicDataDisplay"
       xmlns:customControls="WpfControlLibrary"
+      xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
       mc:Ignorable="d"
       d:DesignWidth="1280" d:DesignHeight="924"
       Name="userTestPage" 
@@ -136,7 +137,7 @@
                 <Grid.Visibility>
                     <MultiBinding Converter="{StaticResource MB2V}">
                         <Binding ElementName="userTestPage" Path="Profile.IsHeightMeasureEnabled" />
-                        <Binding Source="{x:Static res:Settings.Default}" Path="IsHeighMeasureEnable" />
+                        <Binding Source="{x:Static uiServiceConfig:Settings.Default}" Path="IsHeighMeasureEnable" />
                     </MultiBinding>
                 </Grid.Visibility>
                 <Grid.ColumnDefinitions>
@@ -166,7 +167,7 @@
                 <Grid.Visibility>
                     <MultiBinding Converter="{StaticResource MB2V}">
                         <Binding ElementName="userTestPage" Path="Profile.IsHeightMeasureEnabled" />
-                        <Binding Source="{x:Static res:Settings.Default}" Path="IsHeighMeasureEnable" />
+                        <Binding Source="{x:Static uiServiceConfig:Settings.Default}" Path="IsHeighMeasureEnable" />
                     </MultiBinding>
                 </Grid.Visibility>
                 <Grid.ColumnDefinitions>
