--- a/SCME.UI/CustomControl/DialogWindow.xaml
+++ b/SCME.UI/CustomControl/DialogWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
+        xmlns:res="clr-namespace:SCME.UI.Properties"
         mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="400"
         Title="DialogWindow" Width="700" Height="400"
         WindowStyle="None" ResizeMode="NoResize"
