--- a/SCME.UI/CustomControl/ListBoxTestParameters.xaml
+++ b/SCME.UI/CustomControl/ListBoxTestParameters.xaml
@@ -1,7 +1,7 @@
 ﻿<ListView x:Class="SCME.UI.CustomControl.ListBoxTestParameters"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
+             xmlns:res="clr-namespace:SCME.UI.Properties"
              xmlns:ui="clr-namespace:SCME.UI" 
              xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
              xmlns:gateParameters="clr-namespace:SCME.Types.Gate;assembly=SCME.Types" 
