--- a/SCME.UI/CustomControl/ListViewResults.xaml
+++ b/SCME.UI/CustomControl/ListViewResults.xaml
@@ -11,7 +11,7 @@
              xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
              xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls;assembly=SCME.WpfControlLibrary"
              xmlns:ui="clr-namespace:SCME.UI"
-             xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
+             xmlns:res="clr-namespace:SCME.UI.Properties"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
              VirtualizingStackPanel.IsVirtualizing="False"
