--- a/SCME.UI/MainWindow.xaml
+++ b/SCME.UI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="1024" Width="1280" Height="1024"
         xmlns:custom="clr-namespace:SCME.UI.CustomControl" 
-        xmlns:props="clr-namespace:SCME.UIServiceConfig.Properties"
+        xmlns:props="clr-namespace:SCME.UI.Properties"
         xmlns:ui="clr-namespace:SCME.UI"
         xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
         DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
