--- a/SCME.UI/PagesCommon/HardwareStatus.xaml
+++ b/SCME.UI/PagesCommon/HardwareStatus.xaml
@@ -3,7 +3,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:my="clr-namespace:SCME.UI"
-      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties" xmlns:customControls="clr-namespace:SCME.UI.CustomControl"
+      xmlns:res="clr-namespace:SCME.UI.Properties" xmlns:customControls="clr-namespace:SCME.UI.CustomControl"
       xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
       x:Class="SCME.UI.PagesCommon.HardwareStatusPage"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
