--- a/SCME.UI/PagesTech/BvtPage.xaml
+++ b/SCME.UI/PagesTech/BvtPage.xaml
@@ -3,9 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:sys="clr-namespace:System;assembly=mscorlib"
-      xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
-      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
+      xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:ui="clr-namespace:SCME.UI"
       xmlns:dynamicDataDisplay="clr-namespace:Microsoft.Research.DynamicDataDisplay;assembly=DynamicDataDisplay"
       xmlns:customControls="WpfControlLibrary"
