--- a/SCME.UI/PagesTech/SLPage.xaml
+++ b/SCME.UI/PagesTech/SLPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:ui="clr-namespace:SCME.UI"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
-      xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
+      xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:dynamicDataDisplay="clr-namespace:Microsoft.Research.DynamicDataDisplay;assembly=DynamicDataDisplay"
       xmlns:customControls="WpfControlLibrary"
       xmlns:uiServiceConfig="clr-namespace:SCME.UIServiceConfig.Properties;assembly=SCME.UIServiceConfig"
