--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:res="clr-namespace:SCME.UIServiceConfig.Properties"
+        xmlns:res="clr-namespace:SCME.UI.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCME.UI"
         xmlns:ui="clr-namespace:SCME.UI"
